# EasyNetwork

./: .gitignore  .gitmodules  README  README.md  log.txt  ms_build.bat
.github/workflows/: api_server.yml  dart.yml  del.yml  del_runs.yml  easy_network_client.yml  mtls_server.yml  run_build.yml  rust.yml
EasyNetwork/flutter/: README.md  easy_network_ffi.h  ffigen.yaml  pubspec.yaml
EasyNetwork/flutter/android/app/: build.gradle
EasyNetwork/flutter/android/app/src/main/: AndroidManifest.xml
EasyNetwork/flutter/android/app/src/main/kotlin/com/example/easy_network/: MainActivity.kt
EasyNetwork/flutter/ios/Runner/: Info.plist
EasyNetwork/flutter/ios/Runner.xcodeproj/: project.pbxproj
EasyNetwork/flutter/lib/: config.dart  easy_network.dart  easy_network_ffi.dart  easy_network_http.dart  main.dart
EasyNetwork/flutter/lib/pages/: settings_page.dart
EasyNetwork/flutter/linux/: CMakeLists.txt  my_application.cc
EasyNetwork/flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
EasyNetwork/flutter/macos/Runner.xcodeproj/: project.pbxproj
EasyNetwork/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
EasyNetwork/flutter/macos/Runner/Configs/: AppInfo.xcconfig
EasyNetwork/flutter/test/: widget_test.dart
EasyNetwork/flutter/web/: index.html  manifest.json
EasyNetwork/flutter/windows/: CMakeLists.txt
EasyNetwork/flutter/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
EasyNetwork/libEasyNetwork/: CMakeLists.txt  app.manifest  app.rc  easy_network_ffi.c  easy_network_ffi.h  easynet_ffi.c  easynet_ffi.h  hdr.h  itf.c  itf.h  kcp_client.c  kcp_client.h  kcp_utils.h  message.h  peera.c  peerb.c  tls_client.c  tls_client.h  udp_client.c  udp_client.h  wintun_init.c  wintun_init.h  wintun_peer.c  wintun_peer.h
EasyNetwork/libEasyNetwork/tests/: config.json  peer_tests.c
api_server/: Cargo.toml  config.db  device_config.db
api_server/dashboard/lib/device/: device_http.dart
api_server/dashboard/lib/network/: certificate_manager.dart  network_detail.dart  network_http.dart  network_info.dart
api_server/dashboard/lib/network_editor/: cert_network_editor.dart  network_editor.dart  server_network_editor.dart
api_server/src/: config.rs  database.rs  endpoint_list.rs  lib.rs  main.rs  member_online_status.rs  network_join.rs  network_leave.rs  network_member_list.rs  network_members.rs  online_status.rs  route_list.rs  sysinfo.rs
api_server/src/database/: database.rs  device.rs  network.rs
api_server/src/device/: device_sysinfo.rs
api_server/src/endpoint/: endpoint_config.rs  endpoint_list.rs  endpoint_online_status.rs  endpoint_sysinfo.rs  mod.rs
api_server/src/member/: member_config.rs  member_join.rs  member_leave.rs  member_list.rs  member_online_status.rs  mod.rs
api_server/src/network/: mod.rs  network_add.rs  network_config.rs  network_del.rs  network_list.rs  network_update.rs
kcp_server/: CMakeLists.txt  client_mgr.c  client_mgr.h  main.c  udp_server.c  udp_server.h
mtls_server/: CMakeLists.txt  CMakelists.txt  build.sh  client_mgr.c  main.c  stage.c  stage.h
mtls_server/assets/: api_server  build.sh  mtls_server
