[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"